	- implemented "maxblocks" variable to force PC to hang up after
	  transmitting a certain number of blocks
	- added email debugging to PagingCentral.pm
	- whoops: fixed total lack of "snpp-addr" working
	- fixed bug in SNPPServer.pm during unexpected loss of socket
	- implemented "/etc/snpp.conf" file for snpp defaults
	- fixed bug with "esc=true" for PagingCentral.pm

0.9.8: (30Jan2001)
	- further updates to Device::SerialPort and associated documentation
	- further updates to signal handlers
	- fixed bug in queue directory ownership during creation
	- added script to push email through email2page into snpp for sendmail
	- added page queue/delivery logging
	- fixed bug in expanding multiple pins sent to SNPP server
	- fixed error handler for calls into SNPPServer->create
	- added an init-script

0.9.7: (23Jan2001)
	- implemented level 2 SNPP server
	- added SNPP config options
	- added "enabled" flag to PCs
	- added areacode handling on modems and PCs
	- corrected some queue file logic
	- added immediate notification of pages coming from SNPP clients
	- added parent-death awareness
	- corrected USR1 handling in PC queue runners
	- implemented priv dropping for spawned children (no more
	  craziness with setgid/setuid perl settings, etc)
	- created SNPP client
	- created email-parsing tool (with config file)
	- fixed signal handler inheritance bug

0.9.6: (12/31/2000)
	- ported KeesLog.pm's "new" function to use a hash (and fixed calls)
	- ported Modem.pm's "new" function to use a hash (and fixed calls)
	- started work on the SNPP Server functions
	- added documentation on how to port Device::SerialPort
	- added additional debugging to modem settings
	- created "dtrtime" to allow the DTR toggling timeout to be config'd
	- added logic to fully allow a "directly attached" modem to work
	- fixed a few small typos and other nonesense
	- improved handling of dropped-carrier conditions
	- changed device locking behavior to act like minicom and pppd

0.9.5: (09/27/2000)